@@ -6,3 +6,8 @@ signFailledPassword=Sign failled ! False password !
 signSuccess=Sign success !
 verifFailled=FALSE !
 verifSuccess=TRUE !
+cryptFailled=Unknow error, crypt failled.
+cryptSuccess=Crypt success !
+dcryptFailled=Decrypt failled, unknow error
+dcryptFailledPassword=Decrypt failled ! False password !
+dcryptSuccess=Decrypt success !
